--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,92 @@
-.App {
-    text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 
-a {
-    text-decoration: none;
+/* base styles */
+* {
+    margin: 0;
+    font-family: "Quicksand";
+    color: #ffffff;
+    background-color: #2c3e50;
 }
-
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
+.navbar {
+    padding: 20px;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+    max-width: 600px;
+    margin: 0 auto;
+    border-bottom: 1px solid #f2f2f2;
+}
+.navbar h1 {
+    color: #48dbfb;
+}
+.navbar .links {
+    margin-left: auto;
+}
+.navbar a {
+    margin-left: 16px;
+    text-decoration: none;
+    padding: 6px;
+}
+.navbar a:hover {
+    color: #48dbfb;
+}
+.Home {
+    max-width: 600px;
+    margin: 40px auto;
+    padding: 20px;
 }
 
-.App-link {
-    color: #61dafb;
+.homeLists {
+    padding: 20px 26px;
+    margin: 40px 0;
+    border-radius: 15px;
+    background: #222f3e;
+    transition: ease-out 0.25s;
+}
+.homeLists:hover {
+    box-shadow: 7px 16px 26px 0px rgba(0, 0, 0, 0.32);
+    cursor: pointer;
+    border: none;
+    background: #222f3e;
+    transition: ease-in 0.25s;
 }
 
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+.homeLists h2 {
+    font-size: 25px;
+    color: #0abde3;
+    background: #222f3e;
+    margin-bottom: 15px;
+}
+
+.homeLists-body {
+    margin-bottom: 12px;
+    background: #222f3e;
+}
+
+.homeLists-author {
+    font-size: 15px;
+    background: #222f3e;
+    text-align: end;
+    margin-bottom: 8px;
+}
+
+.homeLists .upper {
+    display: flex;
+    background: #222f3e;
+}
+
+.upperLinks {
+    margin-left: auto;
+    background: #222f3e;
+}
+
+.homeLists button {
+    border: none;
+    padding: 12px;
+    border-radius: 12px;
+    background: #eb2f06;
+}
+
+.homeLists button:hover {
+    cursor: pointer;
+    box-shadow: 7px 16px 26px 0px rgba(0, 0, 0, 0.72);
 }
