--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
     color: #ffffff;
     background-color: #2c3e50;
 }
+
+a {
+    text-decoration: none;
+}
+
 .navbar {
     padding: 20px;
     display: flex;
@@ -82,11 +87,33 @@
 .homeLists button {
     border: none;
     padding: 12px;
-    border-radius: 12px;
+    border-radius: 8px;
     background: #eb2f06;
+    transition: ease-out 0.25s;
 }
 
 .homeLists button:hover {
     cursor: pointer;
-    box-shadow: 7px 16px 26px 0px rgba(0, 0, 0, 0.72);
+    box-shadow: 7px 12px 12px 0px rgba(0, 0, 0, 0.72);
+    transition: ease-in 0.25s;
+}
+
+.blogDetails .upper {
+    display: flex;
+    margin-bottom: 25px;
+}
+
+.blogDetails button {
+    border: none;
+    padding: 10px;
+    font-size: 18px;
+    border-radius: 5px;
+    background: #eb2f06;
+    transition: ease-out 0.25s;
+}
+
+.blogDetails button:hover {
+    cursor: pointer;
+    box-shadow: 7px 12px 12px 0px rgba(0, 0, 0, 0.72);
+    transition: ease-in 0.25s;
 }
